--- a/src/haz3lweb/www/style/palette.html
+++ b/src/haz3lweb/www/style/palette.html
@@ -44,6 +44,11 @@
         --GB0: oklch(70% 0.05 120);
         --GB1: oklch(45% 0.05 120);
 
+        /* BLUE */
+        --B0: oklch(85% 0.2 260);
+        --B1: oklch(60% 0.2 260);
+        --B2: oklch(40% 0.2 260);
+
         /* GLASS */
         --PAT: oklch(60% 0.2 225);
         --TYP: oklch(60% 0.2 305);
@@ -200,6 +205,17 @@
             &nbsp;&nbsp;
             <div class="color-swatch" style="background-color: var(--GB0)">GB0</div>
             <div class="color-swatch dark" style="background-color: var(--GB1)">GB1</div>
+          </div>
+        </div>
+
+        <div class="color-group">
+          <h2>Blue</h2>
+          <div class="color-palette">
+            <div class="color-swatch" style="background-color: var(--B0)">B0</div>
+            <div class="color-swatch" style="background-color: var(--B1)">B1</div>
+            &nbsp;&nbsp;
+            <div class="color-swatch dark" style="background-color: var(--B2)">B2</div>
+            &nbsp;&nbsp;
           </div>
         </div>
 
